# BScACS-Major-Project

./: MacOSJsonUtils.cpp  MacOSJsonUtils.h  MacOSMonitoring.cpp  MacOSMonitoring.h  MacOSRollback.cpp  README.md  Welcome.qml  WindowsJsonUtils.cpp  WindowsJsonUtils.h  WindowsMonitoring.h  WindowsRollback.h  alert.h  monitoredKeys.json  monitoredPlists.json  plistFile.cpp  plistFileModel.h  registryKey.cpp  registryKeyModel.h  rollback.h
Monitor/: CMakeLists.txt  Database.cpp  Database.h  MacOSDashboard.qml  MacOSRollback.h  Main.qml  WindowsDashboard.qml  WindowsMonitoring.cpp  WindowsMonitoring.h  WindowsRollback.cpp  alert.cpp  alert.h  encryptionUtils.cpp  encryptionUtils.h  jsonUtils.cpp  jsonUtils.h  main.cpp  monitoredKeys.json  monitoring.cpp  monitoring.h  plistFile.h  plistFileModel.cpp  registryKey.cpp  registryKey.h  registryKeyModel.cpp  registryKeyModel.h  rollback.cpp  rollback.h  settings.cpp  settings.h
